--- a/Style.html
+++ b/Style.html
@@ -13,7 +13,7 @@
 	<h2 id="first">Heading 2 - 1</h2>
 	<h2>Heading 2 - 2</h2>
 	<h2>Heading 2 - 3<span>Try Me</span></h2>
-	<span>Try Me</span>
+	<span>Try Me</span>,
 
 </body>
 </html>
