--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</header>
 		<div class="content">
 			<h2>A propos d'Iron Man</h2>
-			<p>Tony Stark, un génie milliardaire vendeur d'armes, est enlevé par des terroristes et doit concevoir une armes pour eux. Il construit alors une armure equipée d'armes pour s'enfuir.</p>
+			<p>Tony Stark, un génie milliardaire vendeur d'armes, est enlevé par des terroristes et doit concevoir une arme pour eux. Il construit alors une armure equipée d'armes pour s'enfuir.</p>
 			<h2>Caractéristique d'Iron Man</h2>
 			<ol>
 				<li>Excentrique</li>
